--- a/boards/templates/boards/create.html
+++ b/boards/templates/boards/create.html
@@ -1,5 +1,14 @@
 {% extends 'boards/base.html' %}
 
 {% block content %}
-<h1>글이 잘 작성되었습니다.</h1>
+<h1>CREATE</h1>
+<form action="" method="POST">
+    {% csrf_token %}
+    <label for="title">TITLE</label>
+    <input type="text" name="title" id="title"><br>
+    <label for="content">CONTENT</label>
+    <textarea name="content" id="content"></textarea>
+    <input type="submit" value="작성">
+</form>
+<a href="{% url 'boards:index' %}">back</a>
 {% endblock %}
