--- a/boards/templates/boards/detail.html
+++ b/boards/templates/boards/detail.html
@@ -2,10 +2,17 @@
 
 {% block content %}
 <h1>DETAIL</h1>
+<h2>{{ board.pk }} 번째 글</h2>
 <hr>
 <p>{{board.title}}</p>
 <p>{{board.content}}</p>
 <p>{{board.created_at}}</p>
 <p>{{board.updated_at}}</p>
-<a href="/boards">메인으로</a>
+<hr>
+<a href="{% url 'boards:update' board.pk %}">[수정]</a>
+<form action="{% url 'boards:delete' board.pk %}" method="POST" style="display: inline" onsubmit="return confirm('R U SURE??')">
+    {% csrf_token %}
+    <input type="submit" value="삭제">
+</form><br>
+<a href="{% url 'boards:index' %}">메인으로</a>
 {% endblock %}
